--- a/html/home.html
+++ b/html/home.html
@@ -53,7 +53,7 @@
       </div>
             
       <div class="price" id="section3">
-           <img class ="img_manic" src="C:\Users\pallex26\Desktop\универ\3 КУРС\1 семестр\Курсовая ткп\cndproject\img/man1.jpg">
+           <img class ="img_manic" src="../img/man1.jpg">
          <div class="manic">
 
           <h1 class="manic0">Ногтевой сервис</h1> </br>
@@ -70,7 +70,7 @@
 
           </div>
 
-          <img class ="img_hair" src="C:\Users\pallex26\Desktop\универ\3 КУРС\1 семестр\Курсовая ткп\cndproject\img/hair.jpg">
+          <img class ="img_hair" src="../img/hair.jpg">
           <div class="hair">
 
             <h1 class="hair0">Парикмахерские услуги</h1> </br></br>
@@ -92,7 +92,7 @@
 
           </div>
 
-          <img class ="img_face" src="C:\Users\pallex26\Desktop\универ\3 КУРС\1 семестр\Курсовая ткп\cndproject\img/face.png">
+          <img class ="img_face" src="../img/face.png">
           <div class="face">
 
             <h1 class="face0">Услуги косметолога</h1> </br>
