контент в разделе о нас

--- a/html/home.html
+++ b/html/home.html
@@ -48,7 +48,7 @@
         <div class="cntr">
           <div class="green">
               <h1>САЛОН КРАСОТЫ CND</h1>
-              <button id="p" type="button" class="btn btn-sm">Записаться</button>                    
+              <button id="p" type="button" class="btn btn-sm">ЗАПИСАТЬСЯ</button>                    
           </div>
           <div class="time">
             <li>Время работы:</li>
@@ -57,9 +57,19 @@
           </div>
         </div>       
       </div>
-
+    <!-- о нас -->
       <div class="about" id="section2">
-          <!-- о нас -->
+        <div class="tr">
+          <div class="row">
+            <div class="col-4">
+              <img id="sln" src="../resources/salon.jpg">
+            </div>
+            <div class="col-4">
+              <h2>KND -</h2>
+              <p>это атмосфера комфорта и совместного творчества. Модное пространсво.Светлый и уютный салон. Удобное место расположения. Одновременные услуги. Титулованные мастера с большим опытом и знанием языков. Классная музыка и вкусный кофе.</p>            
+            </div>
+          </div>
+        </div>
       </div>
             
       <div class="price" id="section3">
