--- a/html/home.html
+++ b/html/home.html
@@ -47,7 +47,7 @@
       <div class="home" id="section1">
         <div class="cntr">
           <div class="green">
-              <h1>САЛОН КРАСОТЫ CND</h1>
+              <h1>САЛОН КРАСОТЫ KND</h1>
               <button id="p" type="button" class="btn btn-sm">ЗАПИСАТЬСЯ</button>                    
           </div>
           <div class="time">
@@ -59,12 +59,12 @@
       </div>
     <!-- о нас -->
       <div class="about" id="section2">
-        <div class="tr">
+        <div class="b">
           <div class="row">
-            <div class="col-4">
+            <div class="col">
               <img id="sln" src="../resources/salon.jpg">
             </div>
-            <div class="col-4">
+            <div class="col">
               <h2>KND -</h2>
               <p>это атмосфера комфорта и совместного творчества. Модное пространсво.Светлый и уютный салон. Удобное место расположения. Одновременные услуги. Титулованные мастера с большим опытом и знанием языков. Классная музыка и вкусный кофе.</p>            
             </div>
