--- a/html/home.html
+++ b/html/home.html
@@ -128,17 +128,17 @@
         <form class="form-inline" role="form">
           <div class ="row reg_field">
           <div class ="col-md-4">
-          <input type="name" class="form-control mb-2 mr-sm-2" id="usr" placeholder="Имя и фамилия">
+          <input type="name" class="form-control mb-2 mr-sm-2" id="usr" style="border-radius: 90px;" placeholder="Имя и фамилия">
           </div>
           <div class ="col-md-4">
-          <input type="email" class="form-control mb-2 mr-sm-2" id="email" placeholder="Email">
+          <input type="email" class="form-control mb-2 mr-sm-2" id="email" style="border-radius: 90px;" placeholder="Email">
             </div>
             <div class ="col-md-4">
-              <input type="text" class="form-control mb-2 mr-sm-2" placeholder="Номер телефона">
+              <input type="text" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Номер телефона">
             </div>
       
           <div class ="col-4">
-          <select class="form-control" id="sel1" >
+          <select class="form-control" style="border-radius: 90px; width: 80%;" id="sel1" >
             <option>Ольга</option>
             <option>Дарья</option>
             <option>Ангелина</option>
@@ -146,23 +146,25 @@
           </select>
           </div>
           <div class ="col-4">
-          <select class="form-control" id="sel1" >
+          <select class="form-control" style="border-radius: 90px; width: 80%;" id="sel1" >
             <option>Маникюр</option>
             <option>Педикюр</option>
             <option>Массаж лица</option>
             <option>Чистка лица</option>
           </select>
             </div>
-            <div class ="col-4"></div>
+            <div class ="col-4">
+              <input type="text" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Комментарий">
+            </div>
           
            <div class="col-4">
-           <input type="date" class="form-control mb-2 mr-sm-2" placeholder="Дата">
+           <input type="date" class="form-control mb-2 mr-sm-2" style="border-radius: 90px; width: 80%;" placeholder="Дата">
           </div>
           <div class="col-4">
-           <input type="time" class="form-control mb-2 mr-sm-2" placeholder="Время">
+           <input type="time" class="form-control mb-2 mr-sm-2" style="border-radius: 90px; width: 80%;" placeholder="Время">
            </div>
            <div class="col-4">
-        <button type="button" class="btn btn-primary mb-2 " style ="background-color:#203331; border: 0px">Записаться</button>
+        <button id="r" type="button" class="btn btn-primary mb-2 mr-sm-2">Записаться</button>
            </div> 
       </form>
       </div>
