--- a/html/home.html
+++ b/html/home.html
@@ -174,8 +174,6 @@
                 <input type="text" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Телефон">   
               </div>
             </div>
-          </div>        
-          <div class="regist3">  
             <div class="row">          
               <div class="col">
                 <select class="form-control" style="border-radius: 90px;" id="sel1">
@@ -184,7 +182,7 @@
                   <option>Дарья</option>
                   <option>Ангелина</option>
                   <option>Иванна</option>
-                </select>                        
+                </select>                          
               </div>
               <div class="col">
                 <select class="form-control" style="border-radius: 90px;" id="sel1">
@@ -194,6 +192,19 @@
                   <option>Массаж лица</option>
                   <option>Чистка лица</option>
                 </select>
+              </div>
+              <div class="col">
+                <input type="text" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Комментарий">
+              </div>
+            </div>
+          </div>        
+          <div class="regist3">  
+            <div class="row">          
+              <div class="col">
+                <input type="date" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Дата">                      
+              </div>
+              <div class="col">
+                <input type="time" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Время">
               </div>
             </div>
             <button id="reg" type="button" class="btn btn-sm">Готово</button> 
