--- a/html/home.html
+++ b/html/home.html
@@ -162,7 +162,7 @@
 
       <!-- регистрация? -->    
       <div class="regist" id="section4">
-        <h3 style="text-align: center; padding-top: 5%;">Запись</h3>
+        <h3 style="text-align: center; padding-top: 4%;">Запись</h3></br>
           <div class="regist2">
             <div class="row">          
               <div class="col">
