--- a/html/home.html
+++ b/html/home.html
@@ -109,7 +109,7 @@
               <img class ="img_price" src="../resources/hair.jpg">
             </div>
             <div class="col">
-              </br></br></br></br></br>
+              </br></br></br></br>
               <h4>900</h4> 
               <h4>400</h4> 
               <h4>800</h4></br>
@@ -118,7 +118,7 @@
               <h4>2300</h4> 
               <h4>2000</h4> 
             </div>
-            <div style="text-align: right" class="col">
+            <div style="text-align: right" class="col-5">
               <h3>Парикмахерские услуги</h3></br></br>      
               <h4>Стрижка женская (модельная)</h4>          
               <h4>Челка</h4>       
