--- a/html/home.html
+++ b/html/home.html
@@ -82,78 +82,146 @@
         <h3 style="text-align: center; padding-top: 5%;">Услуги</h3>
         <div class="manic">
           <div class="row">
-            <div class="col">
-              <h3 >Ногтевой сервис</h3></br></br>
-              <h4 >Маникюр без покрытия</h4>               
-              <h4 >Маникюр с покрытием Luxio</h4></br>               
-              <h4 >Укрепление ногтевой пластины</h4></br>               
-              <h4 >Педикюр без покрытия</h4>              
-              <h4 >Педикюр с покрытием Luxio</h4>              
-            </div>
-            <div style="text-align: right" class="col">
-              </br></br></br></br>
-              <h4 >800</h4>
-              <h4 >1900</h4></br>
-              <h4 >400</h4></br>
-              <h4 >1100</h4> 
-              <h4 >2500</h4> 
-            </div>
-            <div class="col">
+            <div class="col-lg-8 col-sm-6 col-6">
+              <table style="width: 100%;">
+                <tr>
+                  <th><h3>Ногтевой сервис</h3></th>                
+                </tr>
+                <tr>                  
+                  <td></br></td>
+                </tr>                
+                <tr>               
+                  <td><h4>Маникюр без покрытия</h4></td>                  
+                  <td style="text-align: right;"><h4 >800</h4></td>                  
+                </tr>
+                <tr>
+                  <td><h4>Маникюр с покрытием Luxio</h4></td>
+                  <td style="text-align: right;"><h4 >1900</h4></td>
+                </tr> 
+                <tr>                  
+                  <td></br></td>
+                </tr> 
+                <tr>
+                  <td><h4>Укрепление ногтевой пластины</h4></td>                  
+                  <td style="text-align: right;"><h4>400</h4></td>
+                </tr>
+                <tr>                  
+                  <td></br></td>
+                </tr>  
+                <tr>
+                  <td><h4>Педикюр без покрытия</h4></td>
+                  <td style="text-align: right;"><h4>1100</h4> </td>
+                </tr><tr>
+                  <td><h4>Педикюр с покрытием Luxio</h4> </td>
+                  <td style="text-align: right;"><h4>2500</h4></td>
+                </tr>                
+                </table>   
+            </div>            
+            <div class="col-lg-4 col-sm-6 col-6">
               <img class ="img_price" src="../resources/hands.jpg">
             </div>
           </div>
         </div>
         <div class="face">
           <div class="row">
-            <div class="col">
+            <div class="col-lg-4 col-sm-6 col-6">
               <img class ="img_price" src="../resources/hair.jpg">
             </div>
-            <div class="col">
-              </br></br></br></br>
-              <h4>900</h4> 
-              <h4>400</h4> 
-              <h4>800</h4></br>
-              <h4>600</h4>
-              <h4>800</h4></br>
-              <h4>2300</h4> 
-              <h4>2000</h4> 
-            </div>
-            <div style="text-align: right" class="col-5">
-              <h3>Парикмахерские услуги</h3></br></br>      
-              <h4>Стрижка женская (модельная)</h4>          
-              <h4>Челка</h4>       
-              <h4>Кончики</h4></br>      
-              <h4>Выпрямление</h4>     
-              <h4>Накрутка + стайлинг</h4></br>    
-              <h4>Ботокс для волос</h4>     
-              <h4>Кератиновое выпрямление</h>
-              </br>
-            </div>
+            <div class="col-lg-8 col-sm-6 col-6">
+              <table style="width: 100%;">
+                <tr>
+                  <th></th>
+                  <th style="text-align: right;"><h3>Парикмахерские услуги</h3></th>                
+                </tr>
+                <tr>                  
+                  <td></br></td>
+                </tr>                
+                <tr> 
+                  <td><h4>900</h4></td>               
+                  <td style="text-align: right;"><h4>Стрижка женская (модельная)</h4></td>                                   
+                </tr>
+                <tr> 
+                  <td><h4>400</h4></td>               
+                  <td style="text-align: right;"><h4>Челка</h4></td>                                   
+                </tr>
+                <tr> 
+                  <td><h4>800</h4></td>               
+                  <td style="text-align: right;"><h4>Кончики</h4></td>                                   
+                </tr>
+                <tr>                  
+                  <td></br>
+                </tr> 
+                <tr> 
+                  <td><h4>600</h4></td>               
+                  <td style="text-align: right;"><h4>Выпрямление</h4></td>                                   
+                </tr>
+                <tr> 
+                  <td><h4>800</h4></td>               
+                  <td style="text-align: right;"><h4>Накрутка + стайлинг</h4></td>                                   
+                </tr>
+                <tr>                  
+                  <td></br></td>
+                </tr> 
+                <tr> 
+                  <td><h4>2300</h4></td>               
+                  <td style="text-align: right;"><h4>Ботокс для волос</h4></td>                                   
+                </tr>
+                <tr> 
+                  <td><h4>2000</h4></td>               
+                  <td style="text-align: right;"><h4>Кератиновое выпрямление</h4>
+                </td>                                   
+                </tr>               
+              </table>              
+            </div>            
           </div>
         </div>
         <div class="hair">
           <div class="row">
-            <div class="col">
-              <h3 >Услуги косметолога</h3></br></br> 
-              <h4 >Чистка лица (механическая)</h4>            
-              <h4 >Чистка с альгинатной маской</h4>              
-              <h4 >Чистка комбинированная</h4></br>                 
-              <h4 >Массаж косметический</h4>               
-              <h4 >Массаж Тоффа</h4></br>              
-              <h4 >Пилинг молочный</h4>              
-              <h4 >Пилинг Джесснера</h4>                             
+            <div class="col-lg-8 col-sm-6 col-6">
+              <table style="width: 100%;">
+                <tr>
+                  <th><h3 >Услуги косметолога</h3></th>                
+                </tr>
+                <tr>                  
+                  <td></br></td>
+                </tr>                
+                <tr>               
+                  <td><h4>Чистка лица (механическая)</h4></td>                  
+                  <td style="text-align: right;"><h4>1500</h4></td>                  
+                </tr>
+                <tr>
+                  <td><h4>Чистка с альгинатной маской</h4></td>
+                  <td style="text-align: right;"><h4 >1700</h4></td>
+                </tr>                  
+                <tr>
+                  <td><h4 >Чистка комбинированная</h4></td>                  
+                  <td style="text-align: right;"><h4>1700</h4></td>
+                </tr>
+                <tr>                  
+                  <td></br></td>
+                </tr>  
+                <tr>
+                  <td><h4>Массаж косметический</h4></td>
+                  <td style="text-align: right;"><h4>1300</h4> </td>
+                </tr>
+                <tr>
+                  <td> <h4>Массаж Тоффа</h4></td>
+                  <td style="text-align: right;"><h4>1500</h4></td>
+                </tr>
+                <tr>                  
+                  <td></br></td>
+                </tr>
+                <tr>
+                  <td><h4>Пилинг молочный</h4></td>
+                  <td style="text-align: right;"><h4>1200</h4></td>
+                </tr>
+                <tr>
+                    <td><h4>Пилинг Джесснера</h4></td>
+                    <td style="text-align: right;"><h4>1500</h4></td>
+                  </tr>
+              </table>                                         
             </div>
-            <div style="text-align: right" class="col">
-              </br></br></br></br>
-              <h4>1500</h4>
-              <h4>1700</h4>
-              <h4>1700</h4></br>
-              <h4>1300</h4>
-              <h4>1500</h4></br>
-              <h4>1200</h4>
-              <h4>1500</h4>
-            </div>
-            <div class="col">
+            <div class="col-lg-4 col-sm-6 col-6">
               <img class ="img_price" src="../resources/face.jpg">
             </div>
           </div>
@@ -165,18 +233,16 @@
         <h3 style="text-align: center; padding-top: 4%;">Запись</h3></br>
           <div class="regist2">
             <div class="row">          
-              <div class="col">
+              <div class="col-lg-4 col-sm-6">
                 <input type="name" class="form-control mb-2 mr-sm-2" id="usr" style="border-radius: 90px;" placeholder="ФИ">                          
               </div>
-              <div class="col">
+              <div class="col-lg-4 col-sm-6">
                 <input type="email" class="form-control mb-2 mr-sm-2" id="email" style="border-radius: 90px;" placeholder="Email">
               </div>
-              <div class="col">
+              <div class="col-lg-4 col-sm-6">
                 <input type="text" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Телефон">   
-              </div>
-            </div>
-            <div class="row">          
-              <div class="col">
+              </div>                     
+              <div class="col-lg-4 col-sm-6">
                 <select class="form-control" style="border-radius: 90px;" id="sel1">
                   <option>Выберите мастера</option>
                   <option>Ольга</option>
@@ -185,7 +251,7 @@
                   <option>Иванна</option>
                 </select>                          
               </div>
-              <div class="col">
+              <div class="col-lg-4 col-sm-6">
                 <select class="form-control" style="border-radius: 90px;" id="sel1">
                   <option>Выберите услугу</option>
                   <option>Маникюр</option>
@@ -194,21 +260,19 @@
                   <option>Чистка лица</option>
                 </select>
               </div>
-              <div class="col">
+              <div class="col-lg-4 col-sm-6">
                 <input type="text" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Комментарий">
               </div>
-            </div>
-          </div>        
-          <div class="regist3">  
-            <div class="row">          
-              <div class="col">
+              <div class="col-lg-4 col-sm-6">
                 <input type="date" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Дата">                      
               </div>
-              <div class="col">
+              <div class="col-lg-4 col-sm-6">
                 <input type="time" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Время">
               </div>
-            </div>
-            <button id="reg" type="button" class="btn btn-sm">Готово</button> 
+              <div class="col-lg-4 col-sm-12">
+                <button id="reg" type="button" class="btn btn-sm">Записаться</button> 
+              </div>
+            </div>            
           </div>
       </div>
 
@@ -297,7 +361,9 @@
               </ul>
             </div>
             <div class="col">
-              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1583bd3a53ce4d04c18738bb95a340cd758f85a934b87d10585c753230edbe32&amp;width=463&amp;height=302&amp;lang=ru_RU&amp;scroll=true"></script>
+              <div class="map">
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1583bd3a53ce4d04c18738bb95a340cd758f85a934b87d10585c753230edbe32&amp;width=460&amp;height=299&amp;lang=ru_RU&amp;scroll=true"></script>
+              </div>
             </div>
           </div>
         </div>
