--- a/html/home.html
+++ b/html/home.html
@@ -65,12 +65,12 @@
       <div class="about" id="section2">     
         <div class="b">
           <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-sm-12">
               <img id="sln" src="../resources/salon.jpg">
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-sm-12">
               <h2>KND -</h2>
-              <p>это атмосфера комфорта и совместного творчества. Модное пространсво.Светлый и уютный салон. Удобное место расположения. Одновременные услуги. Титулованные мастера с большим опытом и знанием языков. Классная музыка и вкусный кофе.</p>            
+              <p>это атмосфера комфорта и совместного творчества. Модное пространсво. Светлый и уютный салон. Удобное место расположения. Одновременные услуги. Титулованные мастера с большим опытом и знанием языков. Классная музыка и вкусный кофе.</p>
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
 
       <!--услуги-->
       <div class="price fone2" id="section3">
-        <h3 style="text-align: center; padding-top: 5%;">Услуги</h3>
+        <h3 style="text-align: center;">Услуги</h3>
         <div class="manic">
           <div class="row">
             <div class="col-lg-8 col-sm-6 col-6">
